libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/generic-argument-use-path.jsonc
//@ run: fail
//@ description: Tests that generic arguments in 'use' statements are rejected with appropriate error
["use", "kernel::type<Integer>", { "#tuple": ["T"] }, "_"]
//~^ ERROR cannot find `T` in module `kernel::type`
